# opencv-study

DisplayImage/: CMakeCache.txt  DisplayImage.cpp  Makefile  cmake_install.cmake
background/: CMakeLists.txt  backgroundSubtraction.cpp  bgsub.cpp
color2gray/: color2gray.cpp
denoise/: DenoiseImage.cpp
face/: CMakeLists.txt
image-mutation/: CMakeLists.txt  Makefile  cmake_install.cmake  image_mutation
imageBlur/: imageBlur.cpp
imageSplit/: imageSplit.cpp
imageWindowMove/: imageWindowMove.cpp
lightChange/: CMakeLists.txt  Makefile  cmake_install.cmake
objectTracker/: CMakeLists.txt
openCvSVM/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCVSVM  cmake_install.cmake  main.cpp  main.cpp~
openCvSVM/data/ring/: ._arandela_0062.pgm
walkman/: filter.cpp  walkman.cpp
